<?xml version="1.0" encoding="utf-8"?>
<resources>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="holo_white">#f3f3f3</color>
    <color name="holo_grey">#ddd</color>
    <color name="metro_green">#9ACD32</color>
    <color name="metro_green2">#a0f652</color>
    <color name="dark_green">#4da100</color>
    <color name="dark_green_pressed">#2f6300</color>
        
    
    <string name="app_name">4 Letter Hero</string>
    <string name="menu_settings">Settings</string>
    <string name="letter_placeholder"></string>
    <string name="score_value"></string>
    <string name="your_score_notif">YOUR SCORE:</string>
    <string name="cancel">Cancel</string>
    
   
    <string name="replay_button">REPLAY</string>
    <string name="gameover_highscore_button">SUBMIT SCORE</string>
    <string name="home_button">HOME</string>
 
    <string name="play_button">PLAY</string>
    <string name="home_highscore_button">THE HERO</string>
    <string name="instr_button">INSTRUCTIONS</string>
	
	
	<string name="highscore_confirmation">Please enter a name:</string>
	<string name="highscore_confirmation_positive">Submit</string>
	<string name="highscore_toast">Cannot submit such a low score</string>
	<string name="highscore_congrats_title">Congratulations!</string>
	<string name="highscore_congrats_text">You are now the 4LetterHero!</string>
	<string name="highscore_enter_proper_name">Please enter a proper name.</string>
    
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="c_button">C</string>
    <string name="d_button">D</string>
    <string name="pause_title">Current Game is Paused</string>
    
    
    <string name="placeholder">4 Letter Hero</string>
    <string name="desc">Logo</string>
    
    <string name="header_objective">Objective</string>
    <string name="objective_desc">Tap the corresponding button for the letter that appears on the gameboard to earn points.</string>
    <string name="timelimit_desc">But be quick! The letter will change after a certain time limit and you will not get the points.</string>
    <string name="lives_desc">If you tap the wrong button you will lose a life and some points!</string>
    
    <string name="header_levels">Levels</string>
    <string name="levels_desc">Upon clearing each level (10 letters per level) you will be allowed to continue to the next level. Each level, the letter changes faster but you will earn more points!</string>
    
    <string name="header_hero">The Hero</string>
    <string name="hero_desc">You can submit your score after a level. If you have the highest score you can become the 4 Letter Hero!</string>
    <string name="instr_done">GOT IT!</string>

</resources>