<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".Home" >

    <TextView
        android:id="@+id/placeholder"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_weight="1"
        android:background="@color/metro_green"
        android:padding="@dimen/btn_padding"
        android:text="@string/play_button"
        android:textColor="@color/white"
        android:onClick="buttonPressed" />

    <Button
        android:id="@+id/instructionButton"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        
        android:layout_weight="1"
        android:background="@color/metro_green"
        android:padding="@dimen/btn_padding"
        android:text="@string/instr_button"
        android:textColor="@color/white"
        android:onClick="buttonPressed" />

    <Button
        android:id="@+id/highscoreButton"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_weight="1"
        android:background="@color/metro_green"
        android:padding="@dimen/btn_padding"
        android:text="@string/home_highscore_button"
        android:textColor="@color/white"
        android:onClick="buttonPressed" />

</LinearLayout>