<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/holo_white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/score"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:gravity="right"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.letterhero.android.SquareView
        android:id="@+id/letter"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/rounded_edges"
        android:gravity="center"
        android:paddingBottom="@dimen/square_view_padding"
        android:textColor="@color/white"
        android:textSize="120sp" />

    <LinearLayout
        android:id="@+id/button_section"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="@color/holo_white" >

        <Button
            android:id="@+id/aButton"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/a_button" />

        <Button
            android:id="@+id/bButton"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/b_button" />

        <Button
            android:id="@+id/cButton"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/c_button" />

        <Button
            android:id="@+id/dButton"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="buttonPressed"
            android:text="@string/d_button" />
    </LinearLayout>

</LinearLayout>